fix: serve index.html